# vector-lib

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
.github/workflows/: ci.yml
docs/: devlog.md
include/vector_lib/: vector.hpp
tests/: CMakeLists.txt  vector_test.cpp
